--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@prisma/client": "^5.19.1",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "framer-motion": "^11.11.10",
     "next": "14.2.13",
-    "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.169.0"
