--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "framer-motion": "^11.11.10",
+    "lucide-react": "^0.469.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
